--- a/01_build_dataset.ipynb
+++ b/01_build_dataset.ipynb
@@ -45,11 +45,11 @@
         "id": "718GBnHeSBsx"
       },
       "source": [
-        "### The German Traffic Sign Benchmark\n",
+        "## The German Traffic Sign Benchmark - Data Preparation\n",
         "\n",
-        "Student Name 1: Panagiotis Michalopoulos\n",
+        "Collaborator 1: Panagiotis Michalopoulos\n",
         "\n",
-        "Student Name 2: Filip Finfando"
+        "Collaborator 2: Filip Finfando"
       ]
     },
     {
@@ -272,9 +272,9 @@
         "id": "j0eVsxuvSBtS"
       },
       "source": [
-        "## Assignment 3.4: Traffic sign detection\n",
+        "## Region Proposal Network (RPN)\n",
         "\n",
-        "sudo pip install Keras==2.1.6"
+        "Keras 2.1.6 is required for the RPN to work. Install by executing: sudo pip install Keras==2.1.6 "
       ]
     },
     {
@@ -292,9 +292,9 @@
         "MIN_SIZE = 0\n",
         "\n",
         "# Parameters to play with to modify the number of proposal in each image\n",
-        "TEST_PRE_NMS_TOPK = 32000 # The maximum number of positive samples taken during proposal generation, pre NMS\n",
-        "TEST_POST_NMS_TOPK = 4000 # The maximum number of positive samples taken during proposal generation, post NMS\n",
-        "PROPOSAL_NMS_THRESH = 0.4"
+        "TEST_PRE_NMS_TOPK = 100000 # The maximum number of positive samples taken during proposal generation, pre NMS\n",
+        "TEST_POST_NMS_TOPK = 500 # The maximum number of positive samples taken during proposal generation, post NMS\n",
+        "PROPOSAL_NMS_THRESH = 0.5"
       ],
       "execution_count": 0,
       "outputs": []
@@ -766,33 +766,15 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "2MbQdzbPSBtl",
-        "colab": {}
-      },
-      "source": [
-        "# # Build binary dataset\n",
-        "# Using ground truth as positive labels (real traffic signs) and all objects detected above as negative labels (bullshit and maybe some traffic signs).\n",
-        "\n",
-        "# I guess this could be improved but for now it should work fine.\n",
-        "\n",
-        "\n",
-        "# There are about 1200 positives in gt.txt file.\n",
-        "# We can manipulate number of bboxes we add from one image so there are enough fake bboxes for the net to learn that. If we set it to 10 bboxes from each image we get 9000 fake bboxes and 1200 good bboxes."
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "zb7TobZ7jhtq",
         "colab_type": "text"
       },
       "source": [
-        "## **Load the training and test region box proposals and create the final dataset** "
+        "## Generate the final dataset\n",
+        "\n",
+        "The final dataset contains the ground truth images alongside anchor boxes with IOU>=0.5, labeled according to the sign class they belong to, and roughly 12.000 randomly selected noise images, labeled as -1. Noise images are considered boxes with IOU<=0.2. "
       ]
     },
     {
@@ -803,8 +785,8 @@
         "colab": {}
       },
       "source": [
-        "import pickle\n",
-        "import numpy as np"
+        "# import pickle\n",
+        "# import numpy as np"
       ],
       "execution_count": 0,
       "outputs": []
@@ -817,11 +799,11 @@
         "colab": {}
       },
       "source": [
-        "# reload boxes from pickle\n",
-        "with open('drive/My Drive/models/train_pred.pickle', 'rb') as fp:\n",
-        "    train_pred = pickle.load(fp)\n",
-        "with open('drive/My Drive/models/test_pred.pickle', 'rb') as fp:\n",
-        "    test_pred = pickle.load(fp)"
+        "# # reload boxes from pickle\n",
+        "# with open('drive/My Drive/models/train_pred.pickle', 'rb') as fp:\n",
+        "#     train_pred = pickle.load(fp)\n",
+        "# with open('drive/My Drive/models/test_pred.pickle', 'rb') as fp:\n",
+        "#     test_pred = pickle.load(fp)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -836,27 +818,37 @@
       "source": [
         "%%time\n",
         "def get_bin_labels(number_of_images, n_bbox):\n",
-        "#     tdx = []\n",
-        "#     tdy = []\n",
         "    with open('drive/My Drive/data/bin_labels.txt', 'w+') as file:\n",
         "        \n",
         "        # add negatives\n",
         "        counter = 0\n",
         "        counter2 = 0\n",
+        "        ms = 0\n",
+        "        ratioList = []\n",
+        "        dimx = []\n",
+        "        dimy = []\n",
         "        for i, v in {**train_pred, **test_pred}.items():\n",
         "\n",
         "            # print(i)\n",
         "            # print(v)\n",
-        "\n",
         "            noise_images = 0\n",
+        "            skip = 0\n",
         "            gr_bboxes = []\n",
         "            gr_labels = []\n",
+        "            unique_signs = []\n",
         "            if i in train_files:\n",
         "              # aux = train_images.get(i)[0].copy()\n",
         "              for idx in [l for l, x in enumerate(train_files) if x == i]:\n",
         "                gbbox = train_bboxes[idx]\n",
         "                gr_bboxes.append(gbbox)\n",
         "                gr_labels.append(train_labels[idx])\n",
+        "                gr = abs((int(gbbox[0])-int(gbbox[2]))/(int(gbbox[1])-int(gbbox[3])))\n",
+        "                if gr<1:\n",
+        "                  ratioList.append(1/gr)\n",
+        "                else:\n",
+        "                  ratioList.append(gr)\n",
+        "                dimx.append(abs(int(gbbox[0])-int(gbbox[2])))\n",
+        "                dimy.append(abs(int(gbbox[1])-int(gbbox[3])))\n",
         "                file.write(\n",
         "                    i.split('/')[-1]+';'+\n",
         "                    str(int(gbbox[0]))+';'+\n",
@@ -873,6 +865,13 @@
         "                gbbox = test_bboxes[idx]\n",
         "                gr_bboxes.append(gbbox)\n",
         "                gr_labels.append(test_labels[idx])\n",
+        "                gr = abs((int(gbbox[0])-int(gbbox[2]))/(int(gbbox[1])-int(gbbox[3])))\n",
+        "                if gr<1:\n",
+        "                  ratioList.append(1/gr)\n",
+        "                else:\n",
+        "                  ratioList.append(gr)\n",
+        "                dimx.append(abs(int(gbbox[0])-int(gbbox[2])))\n",
+        "                dimy.append(abs(int(gbbox[1])-int(gbbox[3])))\n",
         "                file.write(\n",
         "                    i.split('/')[-1]+';'+\n",
         "                    str(int(gbbox[0]))+';'+\n",
@@ -880,22 +879,10 @@
         "                    str(int(gbbox[2]))+';'+\n",
         "                    str(int(gbbox[3]))+';'+\n",
         "                    str(test_labels[idx]))\n",
-        "                file.write('\\n')\n",
-        "                # print(gbbox)\n",
-        "                        \n",
-        "            # gr_bboxes = []\n",
-        "            # with open('FullIJCNN2013/gt.txt', 'r') as gr_truth:\n",
-        "            #     for line in gr_truth:\n",
-        "            #         line = line.split(';')\n",
-        "            #         if (line[0] == i.split('/')[-1]):\n",
-        "            #             #print(line[1:5])\n",
-        "            #             gr_bboxes.append(line[1:5])\n",
-        "            \n",
-        "            #print(gr_bboxes)         \n",
-        "            \n",
+        "                file.write('\\n')         \n",
         "            \n",
         "            # save each detected bbox to file and add label\n",
-        "            for bbox in v[0][:n_bbox]:\n",
+        "            for bbox in v[0]:\n",
         "                \n",
         "                #filter out some boxes before tagging them as negatives\n",
         "                dx = int(bbox[0])-int(bbox[2])\n",
@@ -905,86 +892,142 @@
         "                ratio = abs(dy/dx)\n",
         "                if ratio<1:\n",
         "                    ratio=1/ratio\n",
-        "                if ratio>1.71 or abs(dx)>130 or abs(dx)<15 or abs(dy)>130 or abs(dy)<15:\n",
+        "                if ratio>2 or abs(dx)>96 or abs(dy)>96:\n",
         "                    continue                \n",
         "                \n",
         "                temp = []\n",
         "                for k in range(len(gr_bboxes)):\n",
-        "                    iou_var = iou(np.array([gr_bboxes[k]]).astype('float32'), np.array([bbox]))\n",
-        "                    # if float(iou_var[0]>0.5):\n",
-        "                    #   print(i)\n",
-        "                    #   print(\"ground truth: \", np.array([gr_bboxes[k]]).astype('float32'), \" \", \"bounding box: \", np.array([bbox]))\n",
-        "                    #   print(float(iou_var[0]))\n",
-        "                    temp.append(float(iou_var[0]))\n",
-        "                        \n",
+        "                  # print(i)\n",
+        "                  # print(gr_bboxes[k])\n",
+        "                  iou_var = iou(np.array([gr_bboxes[k]]).astype('float32'), np.array([bbox]))\n",
+        "                  # if float(iou_var[0]>0.5):\n",
+        "                  #   print(i)\n",
+        "                  #   print(\"ground truth: \", np.array([gr_bboxes[k]]).astype('float32'), \" \", \"bounding box: \", np.array([bbox]))\n",
+        "                  #   print(float(iou_var[0]))\n",
+        "                  temp.append(float(iou_var[0]))                        \n",
         "                              \n",
         "                \n",
-        "                if max(temp, default=0)>=0.6:\n",
-        "                    #continue\n",
-        "                    # print(i)\n",
-        "                    # cv2.rectangle(aux, (int(bbox[0]),int(bbox[1])), (int(bbox[2]),int(bbox[3])), (0,255,0), 3)\n",
-        "                    sindex = temp.index(max(temp))\n",
-        "                    slabel = gr_labels[sindex]\n",
-        "                    # print(i)\n",
-        "                    # print(slabel)\n",
-        "                    counter2+=1\n",
-        "                    # file.write(\n",
-        "                    #     i.split('/')[-1]+';'+\n",
-        "                    #     str(int(bbox[0]))+';'+\n",
-        "                    #     str(int(bbox[1]))+';'+\n",
-        "                    #     str(int(bbox[2]))+';'+\n",
-        "                    #     str(int(bbox[3]))+';'+\n",
-        "                    #     str(int(slabel)))\n",
-        "                    # file.write('\\n')\n",
-        "                elif max(temp, default=0)<0.2 and noise_images<noise_images_thr:\n",
-        "                    file.write(\n",
-        "                        i.split('/')[-1]+';'+\n",
-        "                        str(int(bbox[0]))+';'+\n",
-        "                        str(int(bbox[1]))+';'+\n",
-        "                        str(int(bbox[2]))+';'+\n",
-        "                        str(int(bbox[3]))+';-1')\n",
-        "                    file.write('\\n')\n",
-        "                    noise_images+=1\n",
+        "                if max(temp, default=0)>=0.5:\n",
+        "                  #continue\n",
+        "                  # print(i)\n",
+        "                  # cv2.rectangle(aux, (int(bbox[0]),int(bbox[1])), (int(bbox[2]),int(bbox[3])), (0,255,0), 3)\n",
+        "                  sindex = temp.index(max(temp))\n",
+        "                  slabel = gr_labels[sindex]\n",
+        "                  if gr_bboxes[sindex][0] not in unique_signs:\n",
+        "                    unique_signs.append(gr_bboxes[sindex][0])\n",
+        "                  # print(i)\n",
+        "                  # print(ratio, dx, dy)\n",
+        "                  # print(slabel)\n",
+        "                  counter2+=1\n",
+        "                  file.write(\n",
+        "                      i.split('/')[-1]+';'+\n",
+        "                      str(int(bbox[0]))+';'+\n",
+        "                      str(int(bbox[1]))+';'+\n",
+        "                      str(int(bbox[2]))+';'+\n",
+        "                      str(int(bbox[3]))+';'+\n",
+        "                      str(int(slabel)))\n",
+        "                  file.write('\\n')\n",
+        "                elif max(temp, default=0)>0 and max(temp, default=0)<0.2:\n",
+        "                  file.write(\n",
+        "                      i.split('/')[-1]+';'+\n",
+        "                      str(int(bbox[0]))+';'+\n",
+        "                      str(int(bbox[1]))+';'+\n",
+        "                      str(int(bbox[2]))+';'+\n",
+        "                      str(int(bbox[3]))+';-1')\n",
+        "                  file.write('\\n')\n",
+        "                elif noise_images<n_bbox and skip==0:\n",
+        "                  file.write(\n",
+        "                      i.split('/')[-1]+';'+\n",
+        "                      str(int(bbox[0]))+';'+\n",
+        "                      str(int(bbox[1]))+';'+\n",
+        "                      str(int(bbox[2]))+';'+\n",
+        "                      str(int(bbox[3]))+';-1')\n",
+        "                  file.write('\\n')\n",
+        "                  noise_images+=1\n",
+        "                  skip=10\n",
+        "\n",
+        "                skip-=1\n",
         "              \n",
         "            \n",
         "            # plt.imshow(cv2.cvtColor(aux, cv2.COLOR_BGR2RGB))\n",
         "            # plt.show()\n",
+        "            # print(i)\n",
+        "            # print(len(unique_signs))\n",
+        "            if len(unique_signs)!=len(gr_bboxes):\n",
+        "              ms += len(gr_bboxes)-len(unique_signs)\n",
+        "              # print(i)\n",
+        "              # print(\"len unique signs: \", len(unique_signs))\n",
+        "              # print(\"len ground boxes: \", len(gr_bboxes))\n",
         "            counter+=1\n",
         "            if counter >= number_of_images: break\n",
         "                \n",
         "\n",
         "        print(\"overlaps with ground truth: \", counter2)\n",
-        "\n",
-        "\n",
-        "        # # add positives\n",
-        "        # with open('FullIJCNN2013/gt.txt', 'r') as positives:\n",
-        "        #     grdx = []\n",
-        "        #     grdy = []\n",
-        "        #     r = []\n",
-        "        #     for line in positives:\n",
-        "        #         line = line.split(';')\n",
-        "        #         grdx.append(abs(int(line[1]) - int(line[3])))\n",
-        "        #         grdy.append(abs(int(line[2]) - int(line[4])))\n",
-        "        #         tempR = (abs(int(line[2]) - int(line[4])))/(abs(int(line[1]) - int(line[3])))\n",
-        "        #         if tempR<1:\n",
-        "        #           tempR = 1/tempR\n",
-        "        #         r.append(tempR)\n",
-        "        #         line[-1] = '1'\n",
-        "        #         file.write(';'.join(line)+'\\n')\n",
-        "            \n",
-        "        # print(\"min ratio: \", min(r))\n",
-        "        # print(\"max ratio: \", max(r))\n",
-        "        # r.sort(reverse = True)\n",
-        "        # print(r)\n",
-        "        # print(\"min dx: \", min(grdx))\n",
-        "        # print(\"max dx: \", max(grdx))\n",
-        "        # print(\"min dy: \", min(grdy))\n",
-        "        # print(\"max dy: \", max(grdy))\n",
+        "        print(\"non detected signs: \", ms)\n",
+        "        ratioList.sort(reverse = True)\n",
+        "        print(\"list of ratios :\", ratioList)\n",
+        "        dimx.sort(reverse = True)\n",
+        "        print(\"list of dx :\", dimx)\n",
+        "        dimy.sort(reverse = True)\n",
+        "        print(\"list of dy :\", dimy)\n",
         "\n",
         "number_of_images = 900 # use small number for testing\n",
-        "n_bbox = 1000 # number of negative bboxes from one image \n",
-        "noise_images_thr = 15 # maximum number of non-sign bboxes per image\n",
+        "n_bbox = TEST_POST_NMS_TOPK # number of negative bboxes per image\n",
         "get_bin_labels(number_of_images, n_bbox)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "09KhKuX2HlW8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# run some tests\n",
+        "i=0\n",
+        "\n",
+        "number_of_images = 40\n",
+        "\n",
+        "# pics = [\"FullIJCNN2013/00014.ppm\", \"FullIJCNN2013/00038.ppm\", \"FullIJCNN2013/00068.ppm\", \"FullIJCNN2013/00072.ppm\", \"FullIJCNN2013/00076.ppm\"]\n",
+        "\n",
+        "for filename in train_images:\n",
+        "    print(filename)\n",
+        "    aux = train_images.get(filename)[0].copy()\n",
+        "\n",
+        "    ground_boxes = []\n",
+        "    if filename in train_files:\n",
+        "        for idx in [i for i, x in enumerate(train_files) if x == filename]:\n",
+        "            bbox = train_bboxes[idx]\n",
+        "            ground_boxes.append(bbox)\n",
+        "            gr_dx = abs(int(bbox[0])-int(bbox[2]))\n",
+        "            gr_dy = abs(int(bbox[1])-int(bbox[3]))\n",
+        "            print(\"dx: \", gr_dx, \"dy: \", gr_dy)\n",
+        "            cv2.rectangle(aux, (int(bbox[0]),int(bbox[1])), (int(bbox[2]),int(bbox[3])), (0,0,255), 3)\n",
+        "\n",
+        "    for bbox in train_pred.get(filename)[0]:  \n",
+        "        dx = int(bbox[0])-int(bbox[2])\n",
+        "        dy = int(bbox[1])-int(bbox[3])\n",
+        "        ratio = abs(dy/dx)\n",
+        "        if ratio<1:\n",
+        "            ratio=1/ratio\n",
+        "        if ratio>2 or abs(dx)>96 or abs(dy)>96:\n",
+        "            continue\n",
+        "\n",
+        "        for k in range(len(ground_boxes)):\n",
+        "          iou_var = iou(np.array([ground_boxes[k]]).astype('float32'), np.array([bbox]))\n",
+        "          if float(iou_var[0])>=0.5:\n",
+        "            cv2.rectangle(aux, (int(bbox[0]),int(bbox[1])), (int(bbox[2]),int(bbox[3])), (0,255,0), 3)\n",
+        "            \n",
+        "    \n",
+        "    plt.imshow(cv2.cvtColor(aux, cv2.COLOR_BGR2RGB))\n",
+        "    plt.show()\n",
+        "    i+=1\n",
+        "    if i==number_of_images: break"
       ],
       "execution_count": 0,
       "outputs": []
