--- a/03_traffic_sign_detector.ipynb
+++ b/03_traffic_sign_detector.ipynb
@@ -218,16 +218,16 @@
         "colab": {}
       },
       "source": [
-        "## import classification model\n",
+        "# ## import classification model\n",
         "\n",
-        "# load json and create model\n",
-        "json_file = open('drive/My Drive/models/classification_model.json', 'r')\n",
-        "loaded_model_json = json_file.read()\n",
-        "json_file.close()\n",
-        "cnn_classifier = model_from_json(loaded_model_json)\n",
-        "# load weights into new model\n",
-        "cnn_classifier.load_weights(\"drive/My Drive/models/classification_model.h5\")\n",
-        "print(\"Loaded classification model from disk\")"
+        "# # load json and create model\n",
+        "# json_file = open('drive/My Drive/models/classification_model.json', 'r')\n",
+        "# loaded_model_json = json_file.read()\n",
+        "# json_file.close()\n",
+        "# cnn_classifier = model_from_json(loaded_model_json)\n",
+        "# # load weights into new model\n",
+        "# cnn_classifier.load_weights(\"drive/My Drive/models/classification_model.h5\")\n",
+        "# print(\"Loaded classification model from disk\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -472,19 +472,18 @@
         "        roi_resized = np.reshape(roi_resized, [1,SIGN_SIZE_CNN[0],SIGN_SIZE_CNN[1],3])\n",
         "    \n",
         "        confidence = cnn.predict(roi_resized)\n",
-        "        if confidence[0][1] >= 0.5:\n",
+        "        if max(confidence[0][0:len(confidence[0])-2])>=0.5:\n",
+        "        # if confidence[0][1] >= 0.5:\n",
         "          cv2.rectangle(aux, (int(bbox[0]),int(bbox[1])), (int(bbox[2]),int(bbox[3])), (0,0,255), 3)\n",
         "        else:\n",
         "          continue\n",
         "                                                \n",
         "        ## sign class\n",
-        "        sign_class = cnn_classifier.predict(roi_resized)\n",
-        "#         sign_class_int = np.where(sign_class[0]==sign_class[0].max())[0][0]\n",
-        "#         print(sign_class_int)\n",
-        "        \n",
+        "        # sign_class = cnn_classifier.predict(roi_resized)        \n",
         "        \n",
         "        # traffic_sign_class confidence bbox\n",
-        "        prds_ofs.write(str(np.argmax(sign_class[0])) + ' ' + str(confidence[0][1]) + ' ' + str(bbox[0]) + ' ' + str(bbox[1]) + ' ' + str(bbox[2]) + ' ' + str(bbox[3]) + '\\n')\n",
+        "        # prds_ofs.write(str(np.argmax(sign_class[0])) + ' ' + str(confidence[0][1]) + ' ' + str(bbox[0]) + ' ' + str(bbox[1]) + ' ' + str(bbox[2]) + ' ' + str(bbox[3]) + '\\n')\n",
+        "        prds_ofs.write(str(np.argmax(confidence[0])) + ' ' + str(max(confidence[0][0:len(confidence[0])-2])) + ' ' + str(bbox[0]) + ' ' + str(bbox[1]) + ' ' + str(bbox[2]) + ' ' + str(bbox[3]) + '\\n')\n",
         "    prds_ofs.close()\n",
         "    plt.imshow(cv2.cvtColor(aux, cv2.COLOR_BGR2RGB))\n",
         "    plt.show()\n",
@@ -533,46 +532,46 @@
       },
       "source": [
         "# Sample results obtained using our detector\n",
-        "81.57% = 1 AP \n",
-        "88.08% = 10 AP \n",
-        "69.71% = 11 AP \n",
-        "82.45% = 12 AP \n",
-        "87.41% = 13 AP \n",
-        "96.67% = 14 AP \n",
-        "86.67% = 15 AP \n",
+        "84.78% = 1 AP \n",
+        "74.41% = 10 AP \n",
+        "89.63% = 11 AP \n",
+        "89.12% = 12 AP \n",
+        "93.87% = 13 AP \n",
+        "88.18% = 14 AP \n",
+        "100.00% = 15 AP \n",
         "100.00% = 16 AP \n",
-        "69.17% = 17 AP \n",
-        "66.22% = 18 AP \n",
-        "84.84% = 2 AP \n",
-        "60.71% = 22 AP \n",
-        "65.48% = 23 AP \n",
+        "95.00% = 17 AP \n",
+        "63.88% = 18 AP \n",
+        "90.48% = 2 AP \n",
+        "50.00% = 22 AP \n",
+        "100.00% = 23 AP \n",
         "100.00% = 24 AP \n",
-        "66.36% = 25 AP \n",
-        "54.59% = 26 AP \n",
-        "80.00% = 28 AP \n",
-        "50.00% = 29 AP \n",
-        "64.44% = 3 AP \n",
+        "80.00% = 25 AP \n",
+        "29.93% = 26 AP \n",
+        "90.29% = 28 AP \n",
+        "100.00% = 29 AP \n",
+        "63.49% = 3 AP \n",
         "100.00% = 30 AP \n",
-        "0.00% = 31 AP \n",
-        "60.00% = 32 AP \n",
+        "100.00% = 31 AP \n",
+        "100.00% = 32 AP \n",
         "100.00% = 33 AP \n",
-        "66.67% = 34 AP \n",
+        "100.00% = 34 AP \n",
         "100.00% = 35 AP \n",
-        "0.00% = 36 AP \n",
+        "100.00% = 36 AP \n",
         "100.00% = 37 AP \n",
-        "65.33% = 38 AP \n",
-        "25.00% = 39 AP \n",
-        "83.44% = 4 AP \n",
-        "27.78% = 40 AP \n",
+        "77.14% = 38 AP \n",
+        "0.00% = 39 AP \n",
+        "93.46% = 4 AP \n",
+        "100.00% = 40 AP \n",
         "100.00% = 41 AP \n",
-        "75.00% = 42 AP \n",
-        "58.78% = 5 AP \n",
+        "0.00% = 42 AP \n",
+        "73.59% = 5 AP \n",
         "100.00% = 6 AP \n",
-        "95.00% = 7 AP \n",
-        "95.00% = 8 AP \n",
-        "79.68% = 9 AP \n",
-        "mAP = 73.32%\n",
-        "Traffic sign detection took 531.8353478908539 seconds"
+        "100.00% = 7 AP \n",
+        "94.85% = 8 AP \n",
+        "88.89% = 9 AP \n",
+        "mAP = 84.50%\n",
+        "Traffic sign detection took 738.1926345825195 seconds"
       ],
       "execution_count": 0,
       "outputs": []
